<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/scan_button"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:visibility="visible"
        app:srcCompat="@android:drawable/btn_dialog" />

    <Button
        android:id="@+id/scan_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/scan" />

    /**
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"
        android:text="@string/button_text"
        android:textColor="@color/black"/>
    **/

    <TextView
        android:id="@+id/user_data_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scan_button"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:text="@string/user_data_label"
        android:textIsSelectable="true" />

    <Space
        style="@android:style/Theme.Holo.Light.Panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_data_label"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:visibility="visible" />

    <TextView
        android:id="@+id/scan_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_data_label"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/scan_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scan_format"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/time_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scan_content"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:textIsSelectable="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scan_content"
        android:layout_centerHorizontal="true"
        android:visibility="visible" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_content"
        android:layout_toStartOf="@+id/scan_button"
        android:onClick="onClick"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/approve_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_content"
        android:layout_toEndOf="@+id/scan_button"
        android:text="@string/accept" />

</RelativeLayout>